# motivate-me

./: .codespellrc  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Settings.toml  _typos.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  pr-checks.yml  release-please.yml  rust.yml
.husky/hooks/: pre-commit
resources/: client.http  http-client.env.json
src/: animation.rs  main.rs  message_handler.rs  message_listener.rs  notifier.rs  payloads.rs  raspberrypi_animation.rs  raspberrypi_notifier.rs  signature_validator.rs
