[package]
name = "motivate-me"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"]}
config = "0.15.11"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
rppal = "0.22.1"

